/* stocks is client-server program to manage a household's food stock
 * Copyright (C) 2019  The stocks developers
 *
 * This file is part of the stocks program suite.
 *
 * stocks is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * stocks is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

plugins {
    id "com.android.library"
    id "checkstyle"
}

android {
    compileSdkVersion 32

    defaultConfig {
        minSdkVersion 24
        targetSdkVersion 32
        multiDexEnabled true

        testInstrumentationRunner "de.njsm.stocks.client.TestRunner"
    }

    buildTypes {
        debug {
            minifyEnabled false
            jniDebuggable true
        }
        release {
            minifyEnabled false
        }
    }


    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    testOptions {
        animationsDisabled true
        unitTests {
            includeAndroidResources = true
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/DEPENDENCIES.txt', 'META-INF/LICENSE.txt', 'META-INF/LICENSE.md', 'META-INF/LICENSE-notice.md', 'META-INF/NOTICE.txt', 'META-INF/NOTICE', 'META-INF/LICENSE', 'META-INF/DEPENDENCIES', 'META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/dependencies.txt', 'META-INF/LGPL2.1']
        }
    }

    lint {
        abortOnError false
        checkAllWarnings true
        lintConfig file("$projectDir/../config/android-lint/lint.xml")
    }
    namespace 'de.njsm.stocks.client.ui'
}

dependencies {
    implementation project(":client-core")
    implementation "javax.inject:javax.inject:${inject_version}"
    implementation "io.reactivex.rxjava3:rxjava:${rxjava_version}"
    implementation "com.google.auto.value:auto-value-annotations:${autovalue_version}"
    implementation "androidx.arch.core:core-common:${androidx_core_version}"
    implementation "androidx.arch.core:core-runtime:${androidx_core_version}"
    implementation "androidx.lifecycle:lifecycle-reactivestreams:${lifecycle_version}"
    implementation "androidx.lifecycle:lifecycle-extensions:${lifecycle_extensions_version}"
    implementation "androidx.paging:paging-runtime:${paging_version}"
    implementation "androidx.paging:paging-rxjava3:${paging_version}"
    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation "androidx.recyclerview:recyclerview:1.2.1"
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
    implementation("androidx.preference:preference:1.2.0")
    implementation "com.google.android.material:material:${material_version}"
    implementation "com.google.dagger:dagger:${dagger_version}"
    implementation "com.google.dagger:dagger-android:${dagger_version}"
    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
    implementation "org.slf4j:slf4j-api:${slf4j_version}"
    implementation "io.reactivex.rxjava3:rxandroid:${rxjava_android_version}"
    implementation "com.google.zxing:core:${zxing_version}"
    implementation "com.journeyapps:zxing-android-embedded:${zxing_android_version}"

    annotationProcessor "com.google.auto.value:auto-value:${autovalue_version}"
    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"

    testImplementation "junit:junit:${junit4_version}"
    testImplementation "org.mockito:mockito-core:${mockito_version}"

    androidTestImplementation project(":client-fakes")
    androidTestImplementation project(":client-fakes-android")
    androidTestImplementation "junit:junit:${junit4_version}"
    androidTestImplementation "org.mockito:mockito-core:${mockito_version}"
    androidTestImplementation "org.mockito:mockito-android:${mockito_version}"
    androidTestImplementation "androidx.arch.core:core-testing:${androidx_core_version}"
    androidTestImplementation "androidx.test.ext:junit:${androidx_test_junit_version}"
    androidTestImplementation "androidx.test.espresso:espresso-core:${espresso_version}"
    androidTestImplementation("androidx.test.espresso:espresso-contrib:${espresso_version}") {
        exclude group: "org.checkerframework", module: "checker"
    }
    androidTestImplementation "androidx.test:runner:${androidx_test_version}"
    androidTestImplementation "androidx.test:rules:${androidx_test_version}"
    androidTestImplementation "androidx.fragment:fragment-testing:${fragment_testing_version}"
    androidTestImplementation "androidx.test.espresso:espresso-intents:${espresso_version}"

    androidTestAnnotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"

    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugar_jdk_version}"
}
